# rgb-sequencer

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  README.md
.github/: dependabot.yml
.github/workflows/: binary-analyzer.yml  ci.yml  docs.yml  size-analysis.yml
docs/: FEATURES.md  IMPLEMENTATION.md
examples/: README.md
examples/rp-pico/: Cargo.toml  README.md  blinky.uf2
examples/rp-pico/.cargo/: config.toml
examples/rp-pico/src/: lib.rs  rgb_led.rs  time.rs
examples/stm32f0/: Cargo.toml  README.md
examples/stm32f0-embassy/: Cargo.toml  README.md  memory.x
examples/stm32f0-embassy/.cargo/: config.toml
examples/stm32f0-embassy/src/: lib.rs  time_wrapper.rs
examples/stm32f0/.cargo/: config.toml
examples/stm32f0/src/: lib.rs  rgb_led.rs  time_source.rs
scripts/: ci-local  cleanup.sh  format.sh
size-analysis/: README.md  analyze.sh
size-analysis/minimal/: Cargo.toml
size-analysis/minimal/src/: main.rs
src/: collection.rs  colors.rs  command.rs  lib.rs  sequence.rs  sequencer.rs  time.rs  types.rs
tests/: colors_tests.rs  sequence_tests.rs  sequencer_tests.rs
tests/common/: mod.rs
tools/: .gitignore  Cargo.toml  README.md  memory_calculator.rs  sequence_memory_calculator.rs
tools/benchmark/: Cargo.toml  README.md  rp2040_benchmarks.md  rp2350_benchmarks.md
tools/benchmark/.cargo/: config.toml
tools/benchmark/rp2040/: Cargo.toml  memory.x  run_benchmark.sh
tools/benchmark/rp2040/.cargo/: config.toml
tools/benchmark/rp2040/src/: bench.rs  main.rs
tools/benchmark/rp2350/: Cargo.toml  memory.x  run_benchmark.sh
tools/benchmark/rp2350/.cargo/: config.toml
tools/benchmark/rp2350/src/: bench.rs  main.rs
tools/benchmark/src/: main.rs
tools/binary-analyzer/: .gitignore
tools/binary-analyzer/minimal/: Cargo.toml
tools/memory-calculator/: Cargo.toml  README.md
tools/memory-calculator/src/: main.rs
tools/size-analysis/: analyze.sh
tools/size-analysis/minimal/: Cargo.toml  memory.x
tools/size-analysis/minimal/.cargo/: config.toml
tools/size-analysis/minimal/src/: main.rs
tools/sizeof-calculator/: .gitignore  Cargo.toml  README.md
tools/sizeof-calculator/src/: main.rs
