[package]
name = "rgb-sequencer"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "A no_std-compatible Rust library for controlling RGB LEDs through timed color sequences on embedded systems"
repository = "https://github.com/HybridChild/rgb-sequencer"
keywords = ["embedded", "rgb", "led", "no-std"]
categories = ["embedded", "no-std"]

[dependencies]
heapless = "0.9.1"
palette = { version = "0.7.6", default-features = false, features = ["libm"] }
defmt = { version = "1.0.1", optional = true }

[features]
default = []
std = ["palette/std"]
defmt = ["dep:defmt"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols