[package]
name = "rgb-sequencer"
version = "0.1.1"
edition = "2024"
authors = ["Esben Dueholm Nørgaard"]
license = "MIT OR Apache-2.0"
description = "A no_std-compatible Rust library for controlling RGB LEDs through timed color sequences on embedded systems"
repository = "https://github.com/HybridChild/rgb-sequencer"
keywords = ["embedded", "rgb", "led", "no-std"]
categories = ["embedded", "no-std"]
exclude = ["examples/", "size-analysis/"]

[dependencies]
heapless = "0.9.2"
palette = { version = "0.7.6", default-features = false, features = ["libm"] }
defmt = { version = "1.0.1", optional = true }

[features]
default = []
defmt = ["dep:defmt"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable link-time optimization
codegen-units = 1   # Better optimization
strip = true        # Strip symbols
