[package]
name = "rp-pico_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = "0.7.7"
cortex-m-rt = "0.7.3"
embedded-hal = "1.0.0"
rp2040-hal = { version = "0.11.0", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3.0"
rp-pico = "0.9.0"
panic-halt = "1.0.0"
rtt-target = "0.6.2"
libm = "0.2"

[dependencies.palette]
version = "0.7.6"
default-features = false
features = ["libm"]

[dependencies.rgb-sequencer]
path = "../.."
default-features = false

[lib]
name = "rp_pico_examples"
path = "src/lib.rs"

[[bin]]
name = "blinky"
path = "bin/blinky/main.rs"

[profile.release]
debug = true
lto = true
opt-level = "z"
