[package]
name = "stm32f0_examples"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.5"
critical-section = "1.2.0"
embedded-hal = "0.2.7"
panic-halt = "1.0.0"
rtt-target = "0.6.2"
stm32f0xx-hal = { version = "0.18.0", features = ["stm32f072"] }
libm = "0.2"

[dependencies.palette]
version = "0.7.6"
default-features = false
features = ["libm"]

[dependencies.rgb-sequencer]
path = "../.."
default-features = false

[lib]
name = "stm32f0"
path = "src/lib.rs"

[[bin]]
name = "blinky"
path = "bin/blinky/main.rs"

[[bin]]
name = "rainbow_capture"
path = "bin/rainbow_capture/main.rs"

[[bin]]
name = "mode_switcher"
path = "bin/mode_switcher/main.rs"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
