[package]
name = "rgb-sequencer-sizeof-calculator"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
rgb-sequencer = { path = "../.." }
palette = { version = "0.7.6", features = ["std"] }
embassy-time = "0.5.0"
chrono = "0.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
