[package]
name = "rgb-sequencer-binary-analyzer"
version = "0.1.0"
edition = "2024"

[dependencies]
rgb-sequencer = { path = "../../..", default-features = false }
heapless = { version = "0.9.2", default-features = false }
palette = { version = "0.7.6", default-features = false, features = ["libm"] }
cortex-m = "0.7"
cortex-m-rt = "0.7"
panic-halt = "1.0.0"

[features]
default = []
defmt = ["rgb-sequencer/defmt"]

[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Better optimization
strip = false       # Keep symbols for analysis

[[bin]]
name = "minimal"
path = "src/main.rs"
